--- a/index.html
+++ b/index.html
@@ -3,18 +3,23 @@
 <head>
   <meta charset="UTF-8">
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   
   <title>Bikcraft - Bicicletas Elétricas</title>
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
   
-  <link rel="preload" href="./css/style.css" as="style">
+  <link rel="icon" href="../favicon.svg" type="img/svg+xml">
+  <link rel="preload" href="./css/style.css" as="style"> 
   <link rel="stylesheet" href="./css/style.css">
+  
+  <script>document.documentElement.classList.add('js');</script>
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  
 </head>
 <body>
 
@@ -198,5 +203,7 @@
       <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns Direitos Rservados </p>
     </div>
   </footer>
+
+  <script src="./js/script.js"></script>
 </body>
 </html>
