--- a/termos.html
+++ b/termos.html
@@ -8,13 +8,18 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <link rel="preload" href="./css/style.css" as="style">
-  <link rel="stylesheet" href="./css/style.css">
+   <link rel="icon" href="./favicon.svg" type="img/svg+xml">
+  <link rel="preload" href="./css/style.css" as="style">  <link rel="stylesheet" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
   <title>Termos e Condições | Bikcraft</title>
   <meta name="description" content="Termos e Condições">
   
+  <script>document.documentElement.classList.add('js');</script>
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body id="termos">
 
@@ -92,5 +97,6 @@
       <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns Direitos Rservados </p>
     </div>
   </footer>
+  <script src="./js/script.js"></script>
 </body>
 </html>
