--- a/contato.html
+++ b/contato.html
@@ -85,7 +85,7 @@
             </div>
             <div class="col-2">
               <label for="email">E-mail</label>
-              <input type="email" id="email" name="email" placeholder="contato@email.com">
+              <input type="email" id="email" name="email" placeholder="contato@email.com" required>
             </div>
             <div class="col-2">
               <label for="mensagem">Mensagem</label>
@@ -170,5 +170,7 @@
     </div>
   </footer>
   <script src="./js/script.js"></script>
+  <script src="./js/formulario.js"></script>
+
 </body>
 </html>
